# test_rest_api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
_demo/basics/: my basic api 012.py  my basic bug 010.py  my basic suite 002.py  my basic suite multi tests 005.py  my basic suite tags 007.py  my basic suite tags ALL 008.py  my basic suite with params 006.py  my first api 011.py
assets/reports/: async_tests_report.html  bug_errors.html  global_variables_errors.html  logger_errors.html  multi_bug_report.html  multi_status_report.html  my_first_report.html  rest_api_errors.html  sync_and_async_report.html  sync_tests_report.html  unexpected_errors.html
src/test_rest_api/: __init__.py  __main__.py
test_rest_api/: __init__.py  __main__.py
test_rest_api/assertion/: assertion.py  exception.py
test_rest_api/bug/: bug.py
test_rest_api/cli/: cli.py
test_rest_api/constant/: constant.py  exception.py
test_rest_api/decorator/: decorator.py  hashtag_filter.py
test_rest_api/environment/: environment.py  exception.py
test_rest_api/exceptions/: assertion_exception.py  base_exception.py  bug_creation_exception.py  constant_exception.py  decorators.py  environment_exception.py  rest_api_creation_exception.py  rest_api_send_exception.py  testdata_exception.py  variable_exception.py
test_rest_api/global_variables/: exception.py  global_variables.py
test_rest_api/logger/: exception.py  logger.py
test_rest_api/loggers/: test_rest_api_console_logger.py  test_rest_api_report_logger.py
test_rest_api/logging/: config.py  filters.py  setup.py  (+2 more)
(+48 files in other folders)
