[build-system]
requires = ["setuptools>=61.0", "aiohttp", "Jinja2", "python-dotenv"]
build-backend = "setuptools.build_meta"

[project]
name = "test_rest_api"
version = "0.0.1"
authors = [
    { name = "Troy M Jose" },
]
description = "Asyncronous Rest Api Test Framework. High performance, easy to learn, fast to code"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Quality Assurance"
]